--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="premium" id="prm"><i class="fa-brands fa-spotify" id="pr"></i>Premium</a>
             </div>
             <div class="play">
-                <a href="#cp"><img src="./Asserts/fi-ss-plus-small.svg" id="plus">Create Playlist</a>
+                <a href="#cp" id="crt"><img src="./Asserts/fi-ss-plus-small.svg" id="plus">Create Playlist</a>
                 <a href="#cp" id="a2"><img src="./Asserts/fi-ss-heart.svg" id="like">Liked songs</a>
                 <a href="#cp" ><img src="./Asserts/Group (1).svg" id="epi">Your Episodes</a>
             </div>
@@ -55,6 +55,10 @@
                     <img src="./Asserts/DA.svg">
                     <img src="./Asserts/Electronic Mix.svg">
                     </div>
+                    </div>
+                    <div CLASS="info">
+                        <p  id="p1">Shows you might like</p>
+                        <p id="p2">SEE ALL</p>
                     </div>
                     <div class="shows">
                         <img src="./Asserts/Artist 1.svg">
